gccida/c3/init_library
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_library/src/cppinit.c:920:7: error: use of undeclared identifier 'init_library_initialized'
if ( !init_library_initialized ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_library/src/cppinit.c:921:1: error: use of undeclared identifier 'init_library_initialized'
init_library_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_library/src/obj/cppinit.o] Error 1
